tests/semantica/invalid/declaracion/test4.ctds
program
	{
		integer x = true + true;

		void main(){
			
		}
	}